--- a/style.css
+++ b/style.css
@@ -135,11 +135,12 @@ h2::after {
 
 /* Styles for the profile picture (image element) */
 .profile-picture {
-  width: 350px; /* Sets the width of the profile picture */
-  height: 350px; /* Sets the height of the profile picture */
+  width: 250px; /* Sets the width of the profile picture */
+  height: 250px; /* Sets the height of the profile picture */
   border-radius: 50%; /* Makes the profile picture round */
   object-fit: cover; /* Ensures the image covers the entire container without distortion */
   box-shadow: 0px 4px 65px rgb(85, 15, 15); /* Adds a shadow around the profile picture */
+  opacity: 0.65; /* 50% transparent */
 }
 
 /* Styles for the text container (description section) */
