--- a/style.css
+++ b/style.css
@@ -448,6 +448,21 @@ h2::after {
 /* Navbar Styles */
 /* ----------------------------------- */
 
+
+header {
+  background-color: #000000;
+  padding: 10px 30px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+}
+
 nav {
   display: none; /* Initially hides the navigation menu */
   flex-direction: column; /* Arranges the menu items vertically */
