--- a/style.css
+++ b/style.css
@@ -450,9 +450,9 @@ h2::after {
 
 
 header {
-  background-color: #000000;
+  background-color: #181616;
   padding: 10px 30px;
-  position: fixed;
+  position: fixed; /* Ensures it's always at the top */
   width: 100%;
   top: 0;
   left: 0;
@@ -462,6 +462,12 @@ header {
   align-items: center;
   box-sizing: border-box;
 }
+
+html, body {
+  height: 100%;
+  overflow-y: auto;
+}
+
 
 nav {
   display: none; /* Initially hides the navigation menu */
