--- a/style.css
+++ b/style.css
@@ -481,6 +481,7 @@ header {
 html, body {
   height: 100%;
   overflow-y: auto;
+  scroll-behavior: smooth;
 }
 
 
@@ -606,16 +607,16 @@ h2::after {
 #about p {
   color: rgb(219, 216, 216); /* Sets the text color to light grey */
   font-family: 'Arial', serif; /* Sets the font to Arial, with a fallback to serif */
-  font-size: 20px; /* Sets the font size */
+  font-size: 18px; /* Sets the font size */
   background-color: #000; /* Sets the background color to black */
-  padding: 30px; /* Adds padding inside the paragraph */
+  padding: 25px; /* Adds padding inside the paragraph */
   border-radius: 55px; /* Rounds the corners of the paragraph */
   text-align: center; /* Justifies the text */
   box-shadow: 0px 4px 20px rgba(247, 0, 0, 0.5); /* Adds a shadow around the paragraph */
-  max-width: 300px; /* Limits the width of the paragraph */
+  max-width: 270px; /* Limits the width of the paragraph */
   margin: auto; /* Centers the paragraph on the page */
   margin-bottom: 100px;
-  padding-top: 20%;
+  padding-top: 10%;
 }
 
 #about h2{
